prototype/_sass/components/_steps.scss
#steps {

	> li {
		display: block;
		
		&.active {
			background: rgba(0,0,0,0.2);
			border-left: 0.3rem solid white;

			a {
				padding-left: 2.3rem;
			}
		}

		> a {
			padding: 0.4em 6% 0.4em 2.6rem;
			display: block;

			.discrete {
				opacity: 0.5;
				font-size: 0.8em;
				font-style: normal;
			}

			&:before {
				font-family: fontello;
				font-size: 0.9em;
				content: "•";
				float: left;
				margin-left: -1.5rem;
				width: 1.4rem;
				text-align: center;
			}

			&.preparation:before {
				content: '\e801';
			}

			&.identification:before {
				content: '\e80a';
			}

			&.action-plan:before {
				content: '\e80c';
			}

			&.report:before {
				content: '\e80e';
				font-size: 0.8em;
			}

			&.status:before {
				content: '\e818';
				font-size: 0.8em;
			}

			&.help:before {
				content: '\e802';
			}
		}

		&#status {
			margin-top: 2em;
			position: relative;

			&:before {
				position: absolute;
				top: -0.95em;
				background-color: gray;
				right: 6%;
				left: 6%;
				content: ' ';
				display: block;
				height: 1px;
				opacity: 0.5;
			}
		}
	}

	.topics {
		> ol {
			margin-bottom: 2em;
		}

		-moz-box-sizing: border-box;
		-webkit-box-sizing: border-box;
		box-sizing: border-box;

		background: #efefef;
		position: absolute;
		left: 100%;
		width: 100%;

		@include screen-size(small) {
			width: 111%;
		}

		@include screen-size(medium) {
			width: 75%;
		}

		height: 100%;
		overflow: auto;
		top: 3rem;
		padding: 10% 6%;

		// @include screen-size(large) {
		// 	position: absolute;
		// 	left: 100%;
		// 	background: #efefef;
		// 	width: 100%;
		// 	height: 100%;
		// 	overflow: auto;
		// 	top: 3rem;
		// 	padding: 10% 6%;
		// }

		li {
			position: relative;

			a {
				padding: 0.4em 6% 0.4em 2.2rem;
				display: block;
				font-weight: bold;
			}

			&.submodule {
				> a {
					padding-left: 3.2rem;
				}

				&:before {
					content: ' ';
					border-left: solid 2px gray;
					position: absolute;
					top: 0.65rem;
					bottom: 0.65rem;
					left: 2.2rem;
				}
			}

			li a {
				// padding-left: 3.2rem;
				font-weight: normal;
			}

			.counter {
				position: absolute;
				font-size: 0.7em;
				left: 0;
				color: rgba(0,0,0,0.5);
			}
		}

		.questions {

			li {

				line-height: 1.3em;
				font-size: 0.8em;

				&.current {
					a {
						background-color: rgba(0,0,0,0.1);
						border-radius: 2em;
					}
				}

				a {
					padding-left: 3.2rem;
					font-weight: normal;

					// &:before {
					// 	content: " ";
					// 	background: gray;
					// 	position: absolute;
					// 	left: 1.75rem;
					// 	width: 1rem;
					// 	height: 1rem;
					// 	border-radius: 50%;
					// }

					position: relative;

					&:before {
						font-family: fontello;
						content: "\e80b";
						color: white;
						background: gray;
						position: absolute;
						left: 1.6rem;
						border-radius: 50%;
						padding: 0.1rem;
						top: 50%;
						margin-top: -0.6rem;
						display: block;
						height: 1rem;
						width: 1rem;
						text-align: center;
						line-height: 1rem;
					}
				}

				&.postponed {
					a:before {
						content: "\e802";
						background: orange;
					}
				}

				&.answered {
					a:before {
						content: "\e80a";
						background: green;
					}
				}

				&.answered.risk {
					a:before {
						content: "\e805";
						background: red;
					}
				}
			}
		}

		a {
			color: black;			
		}

		.legend {
			zoom: 0.8;
			padding: 4%;
			border: 1px solid silver;
			border-radius: 1rem;
			margin-bottom: 2rem;
			// background-color: white;

			li {
				position: relative;
				padding-left: 1.5rem;
				color: gray;

				&:before {
					font-family: fontello;
					content: "\e80b";
					color: white;
					background: gray;
					position: absolute;
					left: 0rem;
					border-radius: 50%;
					padding: 0.1em;
					top: 50%;
					margin-top: -0.6em;
					display: block;
					height: 1em;
					width: 1em;
					text-align: center;
					line-height: 1em;
				}

				&.postponed {
					&:before {
						content: "\e802";
						background: orange;
					}
				}

				&.answered {
					&:before {
						content: "\e80a";
						background: green;
					}
				}

				&.answered.risk {
					&:before {
						content: "\e805";
						background: red;
					}
				}
			}
		}
	}
}

@include screen-size(small) {
	.focus-document {

		#steps {

			.topics {
				display: none;
			}
		}
	}
}

@include screen-size(medium) {
	.osc-on #steps .topics {
		opacity: 0.5;
		pointer-events: none;
	}
}

@include screen-size(small) {
	.osc-s-on #steps .topics {
		opacity: 0.5;
		pointer-events: none;
	}
}

